fix issue on mobile where address bar causes fixed left column to scroll.
Fixed by using svh instead of vh units.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .max-dh-screen {
+    max-height: 100svh;
+  }
+}
+
 @layer components {
   h1 {
     @apply text-5xl font-bold font-mono text-highlight-color tracking-wide;
